traefik/03-http-redirect.yaml
# Middleware to redirect all HTTP to HTTPS
kind: Middleware
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: http-redirect
spec:
  redirectRegex:
    permanent: true
    regex: ^http://(.*)
    replacement: https://${1}

---
# The global HTTP redirect
kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: http-redirect

spec:
  entryPoints:
    - http
  routes:
    - kind: Rule
      match: PathPrefix(`/`)
      services:
        - kind: TraefikService
          name: api@internal
      middlewares:
        - name: http-redirect
