traefik/07-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: traefik
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: "node-role.kubernetes.io/master"
                    operator: In
                    values:
                      - "true"
      containers:
        - name: traefik
          image: traefik:v2.1
          args:
            - --api.dashboard
            - --api.insecure
            - --global.sendAnonymousUsage
            - --providers.kubernetescrd
            - --entrypoints.http.address=:6080
            - --entrypoints.https.address=:6443
            - --entrypoints.traefik.address=:8080
            - --certificatesresolvers.letsencrypt.acme.tlschallenge
            - --certificatesresolvers.letsencrypt.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory
            - --certificatesresolvers.letsencrypt.acme.email=noreply@example.net
            - --certificatesresolvers.letsencrypt.acme.storage=/traefik/acme.json
          ports:
            - name: http
              containerPort: 6080
              hostPort: 80
            - name: https
              containerPort: 6443
              hostPort: 443
            - name: traefik
              containerPort: 8080
          volumeMounts:
            - mountPath: /traefik
              name: traefik
              subPath: config
              readOnly: false
      volumes:
        - name: traefik
          persistentVolumeClaim:
            claimName: traefik-pvc

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  entryPoints:
    - https
  routes:
    - kind: Rule
      match: Host(`traefik.example.net`)
      services:
        - kind: TraefikService
          name: api@internal
  tls:
    certresolver: letsencrypt

---
# Middleware to redirect HTTP to HTTPS
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: http-redirect
  namespace: traefik
spec:
  redirectScheme:
    permanent: true
    scheme: https

---
# The global HTTP redirect
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: http-redirect
  namespace: traefik
spec:
  entryPoints:
    - http
  routes:
    - kind: Rule
      match: PathPrefix(`/`)
      services:
        - kind: TraefikService
          name: api@internal
      middlewares:
        - name: http-redirect
